Corrected syntax errors

--- a/.github/workflows/kmom02.yml
+++ b/.github/workflows/kmom02.yml
@@ -9,13 +9,13 @@ on:
       - closed
 jobs:
   if_merged:
-    if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm run test-kmom02
+    if: github.event.pull_request.merged
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm run test-kmom02
