--- a/.github/workflows/kmom01-hand-in.yml
+++ b/.github/workflows/kmom01-hand-in.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js lts
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: lts
         cache: 'npm'
     - run: npm run test-kmom01-hand-in
