--- a/.github/workflows/kmom02-hand-in.yml
+++ b/.github/workflows/kmom02-hand-in.yml
@@ -1,21 +1,22 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: kmom02
+name: kmom02-hand-in
 
 on:
   pull_request:
     types:
-      - closed
+      - opened
+
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged
+  run_if:
+    if:  startsWith(github.head_ref, 'kmom02')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js lts
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: lts
         cache: 'npm'
-    - run: npm run test-kmom02
+    - run: npm run test-kmom02-hand-in
