--- a/.github/workflows/kmom01-complete.yml
+++ b/.github/workflows/kmom01-complete.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js lts
+    - name: Use Node.js 20
       uses: actions/setup-node@v4
       with:
-        node-version: lts
+        node-version: '20.x'
         cache: 'npm'
     - run: npm run test-kmom01-hand-in
