--- a/.github/workflows/kmom02-hand-in.yml
+++ b/.github/workflows/kmom02-hand-in.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js lts
+    - name: Use Node.js 20
       uses: actions/setup-node@v4
       with:
-        node-version: lts
+        node-version: '20.x'
         cache: 'npm'
     - run: npm run test-kmom02-hand-in
