--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-kmom01-hand-in": "echo \"kmom01-hand-in\" && exit 0",
     "test-kmom01-complete": "echo \"kmom01-complete\" && exit 0",
     "test-kmom02-hand-in": "echo \"kmom02-hand-in\" && exit 0",
-    "test-kmom02-complete": "echo \"kmom02-complete\" && exit 0"
+    "test-kmom02-complete": "echo \"kmom02-complete\" && exit 0",
+    "tagged": "echo \"tagged\" && exit 0"
   },
   "keywords": [],
   "author": "",
